# WeatherForecast

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  JSONs.h  city_and_weather_controller.cpp  city_and_weather_controller.h  terminal_controller.cpp  terminal_controller.h
